Made some changes to fix white space

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,10 @@
+html,body{
+  width: 100%;
+  height:100%;
+  margin:0;
+  padding: 0;
+  overflow-x: hidden;
+}
 
 body{
   font-family: 'Montserrat';
@@ -6,7 +13,7 @@ body{
 h1{
   font-family: 'Montserrat';
   font-weight: 900;
-  font-size: 3.5rem;
+  font-size: 3.2rem;
   line-height: 1.5;
 }
 p{
